src/components/content/about/styles.module.scss
.about {
  height: 100%;
  margin-top: 10%;
}

.dev-section {
  height: 50%;
}

.test-section {
  height: 50%;
}

.title-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding-left: 10%;

  p {
    margin-top: 10px;
    color: white;
    font-size: 20px;
    text-shadow: 0.07em 0 black,
    0 0.07em black,
    -0.07em 0 black,
    0 -0.07em black;
  }
}

.media-wrapper {
  display: flex;
  align-items: flex-start;
  padding-left: 10%;

  .icon {
    width: 45px;
    margin: 10px;
  }
}

// small screen
@media only screen and (max-width: 850px) {
  .title-wrapper {
    p {
      font-size: 15px;
    }
  }

  .media-wrapper {
    .icon {
      width: 25px;
      margin: 3px;
    }
  }
}

